--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "firebase": "^12.3.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
